# NB1P-MinGap

./: .gitignore  README.md  pyproject.toml
bench/: README.md  bench_paper.py  ilp_frontier.py  seeds.py
data/: scenarios_sglpp.duckdb
scripts/: benchmark_sat.py  render_annotated_demo.py  render_sglpp_mingap.py  solve_all.py  syntesim_analyze.py  verify_reduction.py
tests/: conftest.py  test_core.py  test_greedy.py  test_greedy_rollout.py  test_mingap.py  test_nb1p.py  test_phylo.py  test_real_data.py  test_sglpp.py  test_tsp_approx.py
